[project]
name = "raster-extractor"
version = "0.1.0"
description = "Clips raster data to per-dam watershed boundaries (GeoParquet) and reports basic raster stats per dam"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0",
    "pandas>=2.2",
    "fiona>=1.10.1",
    "shapely>=2.0",
    "numpy>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",    # raster clipping (mask) and GeoTIFF I/O
    "pyarrow>=17.0",    # required by geopandas.read_parquet for the watershed boundaries
]
# Notes:
# - tkinter is part of the Python standard library — do NOT add it here.
#   Just make sure the Python build you're using includes it (standard on
#   macOS python.org / Homebrew builds).
# - GDAL itself must still be installed at the system level for fiona/
#   geopandas/rasterio to work: `brew install gdal`.
# - Add project-specific extras as needed, e.g.:
#     "tqdm>=4.66",       # progress bars for batch clipping
#     "pyogrio>=0.9",     # faster I/O backend, alternative to fiona
 
[tool.uv]
# This is a scripts project (Module/), not an installable library —
# skip building/installing it as a package.
package = false
 